<resources>
    <string name="app_name">Lab2</string>
    <string name="crust">Crust</string>
    <string name="_00_00">$00.00</string>
    <string name="topping">Topping</string>
    <string name="to_go_or_no">To go or no?</string>
    <string name="size">Size</string>
    <string name="crispy">Crispy</string>
    <string name="thick">Thick</string>
    <string name="soggy">Soggy</string>
    <string name="at_restaurant">At Restaurant</string>
    <string name="pickup">Pickup</string>
    <string name="deliver">Deliver</string>
    <string name="anchovies">Anchovies</string>
    <string name="pineapple">Pineapple</string>
    <string name="garlic">Garlic</string>
    <string name="okra">Okra</string>
    <string name="_0_in">0 in</string>
</resources>