<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_crust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/crust"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_topping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:text="@string/topping"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_toGoOrNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_go_or_no"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/textView_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/size"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/_0_00"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_crust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_crust">

        <RadioButton
            android:id="@+id/radioButton_crispy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crispy" />

        <RadioButton
            android:id="@+id/radioButton_thick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thick" />

        <RadioButton
            android:id="@+id/radioButton_soggy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soggy" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_toGoOrNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_toGoOrNo">

        <RadioButton
            android:id="@+id/radioButton_atRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/at_restaurant" />

        <RadioButton
            android:id="@+id/radioButton_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup" />

        <RadioButton
            android:id="@+id/radioButton_deliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deliver" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox_anchovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="22dp"
        android:text="@string/anchovies"
        app:layout_constraintStart_toEndOf="@+id/radioGroup_crust"
        app:layout_constraintTop_toBottomOf="@+id/textView_topping" />

    <CheckBox
        android:id="@+id/checkBox_pineapple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pineapple"
        app:layout_constraintStart_toStartOf="@+id/checkBox_anchovies"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_anchovies" />

    <CheckBox
        android:id="@+id/checkBox_garlic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garlic"
        app:layout_constraintStart_toStartOf="@+id/checkBox_pineapple"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_pineapple" />

    <CheckBox
        android:id="@+id/checkBox_okra"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:text="@string/okra"
        app:layout_constraintStart_toStartOf="@+id/checkBox_garlic"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_garlic" />

    <SeekBar
        android:id="@+id/seekBar_size"
        android:layout_width="320dp"
        android:layout_height="28dp"
        android:layout_marginBottom="62dp"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/_0_in"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>